# Spam_Detection_Backend_ML

./: .gitignore  README.md  audio_pipeline.py  config.py  feature_extraction.py  newServer.py  pyproject.toml  repetition_preprocessing.py  requirements.txt
models/: best_phoneme_model.keras  best_repetition_model.keras
