[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "keras>=3.13.2",
    "librosa>=0.11.0",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "sentence-transformers>=5.2.3",
    "sounddevice>=0.5.5",
    "tensorflow>=2.21.0",
    "uvicorn>=0.41.0",
    "webrtcvad>=2.0.10",
    "setuptools<70",
]
